--- a/views/productos.html
+++ b/views/productos.html
@@ -60,7 +60,7 @@
             <div class="obra">
                 <img src="../images/hospital12octubre.jpg" alt="Producto 7" width="100" height="50">
                 <div class="info">
-                    <h3>Centro comercial en Granada</h3>
+                    <h3>Hospital 12 Octubre Madrid</h3>
                 </div>
             </div>
             <div class="obra">
